2015-05-22  Carl Hetherington  <cth@carlh.net>

	* Tweak layout of jobs view; stop disappearing
	buttons with long messages (#578).

	* Fix corrupted sound when resampling in some cases.

2015-05-22  c.hetherington  <cth@carlh.net>

	* Increase the number of images that DCP-o-matic will
	keep around in memory before resorting to pushing them
	to disk.

2015-05-22  carl  <cth@carlh.net>

	* Display DCP container size beside the choice
	in the DCP tab.

2015-05-21  c.hetherington  <cth@carlh.net>

	* Updated ru_RU translation from Igor Voytovich.

2015-05-21  Carl Hetherington  <cth@carlh.net>

	* Try to set up useful default colour conversions
	depending on the type and resolution of content (#565).

2015-05-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.79.3 released.

2015-05-20  Carl Hetherington  <cth@carlh.net>

	* Tweak colour conversion controls so that it's
	easier to use a preset without seeing the details.

2015-05-18  c.hetherington  <cth@carlh.net>

	* Present all audio streams of content in the
	audio matrix, not just the selected one (#274).

	* Use better filenames for DCP components (#366).

2015-05-17  Carl Hetherington  <cth@carlh.net>

	* Version 1.79.2 released.

2015-05-17  Carl Hetherington  <cth@carlh.net>

	* Fix failure to import some video MXFs (#566).

	* Updated ru_RU translation from Igor Voytovich.

	* Version 1.79.1 released.

2015-05-16  Carl Hetherington  <cth@carlh.net>

	* Update DCP name on changing DCP standard (#570).

	* Fix `programming error' on audio analysis
	with a -ve delay (#571).

2015-05-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.79.0 released.

2015-05-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.78.14 released.

2015-05-13  c.hetherington  <cth@carlh.net>

	* Replace audio analysis saving code with new approach
	which is (hopefully) more robust.

2015-05-11  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 1.78.13 released.
